--- a/src/ConsoleTable/ConsoleTable.csproj
+++ b/src/ConsoleTable/ConsoleTable.csproj
@@ -8,7 +8,7 @@
     <RootNamespace>ConsoleTable</RootNamespace>
 
     <!-- NuGet Package -->
-    <PackageId>ConsoleTable</PackageId>
+    <PackageId>Raebnow.ConsoleTable</PackageId>
     <Version>1.0.0</Version>
     <Authors>ConsoleTable Contributors</Authors>
     <Description>A lightweight .NET library for rendering beautiful tables in the console with customizable headers, cell alignment (Left/Center/Right), colors, and multiple border styles.</Description>
